# rules_js_sandbox_escape_repro

./: BUILD.bazel  README.md  WORKSPACE.bazel  bin.mjs  lib.js  package.json
